Fixed overlapping codes

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -67,11 +67,6 @@
     font-size: smaller;
   }
 
-  .productcontiner {
-    display: flex;
-    flex-direction: column;
-  }
-
   .product {
     width: 450px;
     height: auto;
@@ -245,11 +240,6 @@
     font-size: smaller;
   }
 
-  .productcontiner {
-    display: flex;
-    flex-direction: column;
-  }
-
   .product {
     width: 300px;
     height: auto;
@@ -420,11 +410,6 @@
     margin: 10px;
     font-weight: 600;
     font-size: smaller;
-  }
-
-  .productcontiner {
-    display: flex;
-    flex-direction: column;
   }
 
   .product {
@@ -613,11 +598,6 @@
     font-size: smaller;
   }
 
-  .productcontiner {
-    display: flex;
-    flex-direction: column;
-  }
-
   .product {
     width: 300px;
     height: auto;
@@ -790,11 +770,6 @@
     margin: 10px;
     font-weight: 600;
     font-size: smaller;
-  }
-
-  .productcontiner {
-    display: flex;
-    flex-direction: column;
   }
 
   .product {
@@ -971,11 +946,6 @@
     font-size: smaller;
   }
 
-  .productcontiner {
-    display: flex;
-    flex-direction: column;
-  }
-
   .product {
     width: 300px;
     height: auto;
@@ -1150,11 +1120,6 @@
     font-size: smaller;
   }
 
-  .productcontiner {
-    display: flex;
-    flex-direction: column;
-  }
-
   .product {
     width: 270px;
     height: auto;
@@ -1253,24 +1218,9 @@
     margin: 12% 0px 0px 0px;
   }
 
-<<<<<<< HEAD
-.copyrightlayer {
-  background-color: black;
-  width: 100%;
-  height: 60px;
-  text-align: center;
-  align-content: center;
-  padding: 15px;
-}
-
-.copyrightlayer p {
-  color: white;
-  font-size: smaller;
-=======
   span.d {
     line-height: 100%;
   }
->>>>>>> 2f88a92c8ed34195bc0189912def1a7300973ca4
 }
 @media screen and (min-width: 769px) and (max-width:1023px) { 
   .pic img {  width: 100%;}
@@ -1339,11 +1289,6 @@
     margin: 10px;
     font-weight: 600;
     font-size: smaller;
-  }
-
-  .productcontiner {
-    display: flex;
-    flex-direction: column;
   }
 
   .product {
@@ -1615,7 +1560,11 @@
   justify-content: center;
 }
 
-/* .copyrightlayer {
+.close {
+  display: block;
+}
+
+.copyrightlayer {
   display: block;
   background-color: black;
   width: 400px;
@@ -1628,10 +1577,6 @@
 .copyrightlayer p {
   color: white;
   font-size: smaller;
-<<<<<<< HEAD
-} */
-=======
 }
 
 .footerappbanner { height: 80px;  }
->>>>>>> 2f88a92c8ed34195bc0189912def1a7300973ca4
